--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,16 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.14-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20131018</version>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
