Add extra config values

--- a/src/main/resources/server.yml
+++ b/src/main/resources/server.yml
@@ -4,3 +4,8 @@ settings:
   offline: false
   max-players: 20
   debug: false
+ping:
+  motd:
+  - '&bA Minecraft Server'
+  accessible: true
+  protocol: default
