--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>jopt-simple</artifactId>
             <version>4.6</version>
         </dependency>
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>2.12</version>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -101,6 +106,7 @@
                                     <include>org.pistonmc:piston</include>
                                     <include>io.netty:netty-all</include>
                                     <include>net.sf.jopt-simple:jopt-simple</include>
+                                    <include>jline:jline</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
