--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>jline</artifactId>
             <version>2.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
+        </dependency>
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -107,6 +112,7 @@
                                     <include>io.netty:netty-all</include>
                                     <include>net.sf.jopt-simple:jopt-simple</include>
                                     <include>jline:jline</include>
+                                    <include>org.apache.httpcomponents:httpclient</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
